# Resumer

./: .dockerignore  .gitignore  Dockerfile  README.md  database.py  frontend.html  main.py  pyproject.toml  render.yaml  requirements.txt  resume.typ  resume1.json  resume2.json  resume3.json  resume_all.json
frontend/: dashboard.html  generate.html  login.html  manage_education.html  manage_experience.html  manage_personal_info.html  manage_projects.html  manage_references.html  manage_skills.html  manage_summaries.html  register.html
typst_templates/: basic_resume.typ
